# llmops-api

./: .gitignore  README.md  main.py  pyproject.toml  pytest.ini
.github/prompts/: orm.prompt.md
app/: __init__.py
app/http/: app.py  module.py
config/: config.py  default_config.py
internal/exception/: exception.py
internal/extension/: database_extension.py
internal/handler/: app_handler.py
internal/migration/versions/: 1cf783695af5_project_init.py
internal/model/: app.py
internal/router/: router.py
internal/schema/: app_schema.py
internal/server/: http.py
internal/service/: __init__.py  app_service.py
note/: with.md
pkg/response/: __init__.py  http_code.py  response.py
pkg/sqlalchemy/: note.md  sqlalchemy.py
study/0_note/: note.md
study/Model_IO/model/: 1_message.py  2_message_stream_output.py
study/Model_IO/output_parser/: 1_base.ipynb
study/Model_IO/prompt/: 1_base.py  2_string_concat.py  3_reuse_template.py
study/flask/: index.py  post.py
study/flask/add_route/: index.py
study/flask/blue_print/: index.py
study/flask/blue_print/goods/: __init__.py  view.py
study/flask/blue_print/user/: __init__.py  view.py
study/flask/class_view/: index.py
study/flask/template/: index.py
study/flask/template/templates/: children.html  index1.html  parent.html
study/flask/template/templates/macro/: common.html
study/test/: map.ipynb  test.py
test/: conftest.py
test/internal/handler/: test_app_handler.py
